resources/assets/stylesheets/scss/my_courses.scss
.missing_course {
    .content {
        font-weight: bold;
    }
    border: 2px solid var(--red);
    display: inline-block;
    padding: 5px;
    margin: 5px 0;
    background: var(--white);
}

$icon-padding: 3px;

.my-courses-navigation {
    color: var(--color--highlight);
    list-style: none;
    margin: 0 0 -10px;
    padding: 0;

    display: flex;
    flex-wrap: wrap;
}
.my-courses-navigation-item {
    margin: 0 3px 10px 0;

    a {
        display: inline-block;
        padding: $icon-padding;

        &:hover {
            color: inherit;
        }
    }

    &:last-child {
        margin-right: 0;
    }

    svg {
        vertical-align: bottom;
    }

    .empty-slot {
        display: inline-block;
        padding-left: $icon-padding;
        padding-right: $icon-padding;
    }

    &.my-courses-navigation-important {
        $border-width: 1px;
        border: $border-width solid var(--color--warning);

        a {
            padding: $icon-padding - $border-width;
            color: var(--color--warning);

            &:hover {
                color: var(--color--warning);
            }
        }
    }
}

